--- a/nginx/sites-available/moonlan-ssl.conf
+++ b/nginx/sites-available/moonlan-ssl.conf
@@ -1,24 +1,24 @@
 server {
-	server_name moonlan.sytes.net;
+	server_name <server_name>;
 	location / {
 		proxy_pass http://127.0.0.1:3000;
 	}
 
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/moonlan.sytes.net/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/moonlan.sytes.net/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/<server_name>/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/<server_name>/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
 }
 server {
-    if ($host = moonlan.sytes.net) {
+    if ($host = <server_name>) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
 
 	listen 80;
-	server_name moonlan.sytes.net;
+	server_name <server_name>;
     return 404; # managed by Certbot
 
 
