--- a/template/api/config.json
+++ b/template/api/config.json
@@ -15,7 +15,7 @@
   "server": {
     "allowed_origins": [
       "http://localhost:3000",
-      "http://<server_name>"
+      "<origin_url>"
     ]
   }
 }
